Change font-size to px to fix display of icons on IE.

--- a/css/partials/_sidebar.scss
+++ b/css/partials/_sidebar.scss
@@ -25,7 +25,7 @@
 			font-family:FontAwesome;
 			content:"\f138";
 			color: #338bc5;
-			font-size: .75em;
+			font-size: 11px;
 		}
 	}
 	.connect-widget,
@@ -43,7 +43,7 @@
 			font-family:FontAwesome;
 			content:"\f099" !important;
 			color: #338bc5;
-			font-size: 1em;
+			font-size: 14px;
 		}
 		div span.fb-connect:before {
 			position:absolute;
@@ -52,7 +52,7 @@
 			font-family:FontAwesome;
 			content:"\f082" !important;
 			color: #338bc5;
-			font-size: 1em;
+			font-size: 14px;
 		}
 		div span.email-connect:before {
 			position:absolute;
@@ -61,7 +61,7 @@
 			font-family:FontAwesome;
 			content:"\f003" !important;
 			color: #338bc5;
-			font-size: 1em;
+			font-size: 14px;
 		}
 	}
 }
